fixed hard to read color on hover for notes list items

--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,8 @@ main {
 }
 
 .notesList li:hover {
-  color: dimgray;
+  color: forestgreen;
+  font-weight: 500;
 }
 
 .notesList h3 {
